feat: Add advanced features for vehicle dashboard
- Implemented search functionality to filter vehicles by name.
- Added sorting by name (A-Z, Z-A) and update date (newest, oldest).
- Introduced filtering by vehicle status (Active, Maintenance, Inactive).
- Integrated pagination with pre-fetching for smoother navigation.

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -4,12 +4,43 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vehicle Management</title>
+  <title>Vehicle Management System</title>
+
+  <meta name="description"
+    content="A cutting-edge vehicle management system for tracking, managing, and maintaining vehicles effectively. Streamline operations and improve efficiency with our solution." />
+  <meta name="keywords"
+    content="vehicle management, fleet management, car tracking, vehicle maintenance, transportation system" />
+  <meta name="author" content="Your Company Name" />
+
+  <meta property="og:title" content="Vehicle Management System" />
+  <meta property="og:description"
+    content="Manage your fleet efficiently with our powerful vehicle management solution." />
+  <meta property="og:image" content="https://example.com/assets/vehicle-management-og-image.jpg" />
+  <meta property="og:url" content="https://example.com/vehicle-management" />
+  <meta property="og:type" content="website" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Vehicle Management System" />
+  <meta name="twitter:description" content="Streamline your vehicle operations with our modern management solution." />
+  <meta name="twitter:image" content="https://example.com/assets/vehicle-management-twitter-card.jpg" />
+  <meta name="twitter:site" content="@YourCompanyHandle" />
+
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="./favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicons/favicon-16x16.png">
+  <link rel="manifest" href="./favicons/site.webmanifest">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/assets/styles.css" />
+
+  <meta name="robots" content="index, follow" />
 </head>
 
 <body>
   <div id="root"></div>
-  <!-- <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script> -->
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
